page 5 fixed alignment

--- a/static/css/style_page5.css
+++ b/static/css/style_page5.css
@@ -4,10 +4,8 @@
 }
 
 body{
-	padding: 15px 40px 15px 40px;
-    font-family: Helvetica, Sans-Serif;
-	width: 80%;
-	margin: 0 auto;
+	margin: 10px 40px 0 40px;
+	font: 15px "Times New Roman", Sans-Serif;
 }
 
 #header-text {
@@ -15,8 +13,8 @@ body{
 	width: 100%;
 	text-align: center;
 	color: rgb(0, 0, 0);
-	font: 15px;
-    margin: 0 !important;
+	font-size: 16px;
+	margin: 0 !important;
 }
 
 .header-color {
@@ -27,19 +25,17 @@ body{
     width: 100px;
     height: 100px;
     float: left;
+	top: 0;
     position: absolute;
-    top: 10px;
-	padding-left: 20px;
-	/*padding-left: 100px;*/
-    /*padding-top: 10px;*/
+	padding-left: 5px;
 }
 
 #header-iso{
     color: darkcyan;
 	float: left;
 	text-align: center;
-	padding-top: 30px;
-	padding-left: 8px;
+	padding-top: 15px;
+	font: 15px Helvetica, Sans-Serif;
 }
 #certification{
 	padding-top: 120px;
@@ -55,7 +51,8 @@ body{
 	float: left;
 	width: 100%;
 	height: 60px;
-	font: 15px;
+	font-size: 16px;
+    font-family: Helvetica, Sans-Serif;
 	padding: 15px 0;
 	margin-bottom: 20px;
 }
@@ -63,15 +60,16 @@ body{
 	display: inline;
 }
 #letter-body-content {
-	text-indent: 4em;
+	text-indent: 3em;
 	margin-bottom: 20px;
 	text-align: justify;
 	text-justify: inter-word;
 }
 #registrar {
-    width: 300px;
+    /*width: 200px;*/
 	margin: 40px 0 40px 0;
 	text-align: center;
+	padding-right: 40px;
 	float: right;
 	color: #c1312c;
 }
@@ -80,16 +78,34 @@ body{
 }
 
 #uni-registrar {
-	width: 300px;
-	margin:15px;
+    float: left;
+	margin: 15px;
+	padding-left: 40px;
 	text-align: center;
 }
 
 #ureg {
-	margin-top: 80px;
+	margin-top: 150px;
+	font-size: 12px;
+	font-family: "Arial Black";
 }
 
 #rev {
-	margin-top: 60px;
+	margin-top: 175px;
 	float: right;
+	font-size: 12px;
+	font-family: "Arial Black";
+}
+
+@media print {
+	.container {
+		width: 100%;
+		margin: 0;
+		padding: 20px 0;
+		border: none;
+	}
+	body {
+		-webkit-print-color-adjust: exact;
+		color-adjust: exact;
+	}
 }
